--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,19 @@
     </head>
     <body>
         <h1>Hello Vanka!</h1>
+        <table>
+            <thead>
+                <th>&nbsp;</th>
+                <th>Id</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Email</th>
+            </thead>
+            <tbody id="users">
+
+            </tbody>
+        </table>
+        <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
         <script src="bundle.js">
 
         </script>
