production build, dynamic HTML generation, bundle spliting, cache busting, extract and minify CSS

--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,8 @@
                 <th>Last Name</th>
                 <th>Email</th>
             </thead>
-            <tbody id="users">
-
-            </tbody>
+            <tbody id="users"></tbody>
         </table>
         <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
-        <script src="bundle.js">
-
-        </script>
     </body>
 </html>
